--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.7.8*/
+/*1.7.9*/
 
 	/*Main color variables*/
 	:root
@@ -430,6 +430,11 @@
 	{
 		opacity: 1 !important;
 	}
+	/*Very specific hover for thumbnails*/
+	#dismissable.ytd-compact-video-renderer:hover img.yt-img-shadow, #items.yt-horizontal-list-renderer > .yt-horizontal-list-renderer:hover img.yt-img-shadow, #items.ytd-grid-renderer > ytd-grid-video-renderer.ytd-grid-renderer:hover img.yt-img-shadow, ytd-video-renderer.ytd-item-section-renderer:hover img.yt-img-shadow, .style-scope.ytd-channel-featured-content-renderer:hover img.yt-img-shadow, #grid-container.ytd-expanded-shelf-contents-renderer > .ytd-expanded-shelf-contents-renderer:hover img.yt-img-shadow, ytd-playlist-video-renderer:hover img.yt-img-shadow, iron-list:not([grid]) #items.iron-list > *:hover img.yt-img-shadow
+	{
+		opacity: 1 !important;
+	}
 	
 	/*Video section*/
 	/*Video title hover in html5 video*/
@@ -496,8 +501,13 @@
 	{
 		background-color: var(--hover-background) !important;
 	}
-
 	
+	/*Watch later svg*/
+	.style-scope.ytd-thumbnail-overlay-toggle-button-renderer:hover
+	{
+    		fill: var(--main-color) !important;
+	}
+
 	/*Popup for when you hover over the channel avatar in the video*/
 	.iv-branding .branding-context-container-inner
 	{
