--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.7.9*/
+/*1.8.0*/
 
 	/*Main color variables*/
 	:root
@@ -455,42 +455,46 @@
 	{
 		background: var(--main-color) !important;
 	}
-
 	.ytp-volume-slider-track, .ytp-volume-slider-handle:before
 	{
 		background: var(--main-color) !important;
 		z-index: -117;
 	}
-
 	.ytp-settings-button.ytp-hd-quality-badge::after, .ytp-settings-button.ytp-4k-quality-badge::after, .ytp-settings-button.ytp-5k-quality-badge::after, .ytp-settings-button.ytp-8k-quality-badge::after, .ytp-settings-button.ytp-3d-badge::after
 	{
 		background-color: var(--main-color) !important;
 	}
-
 	.ytp-swatch-color
 	{
 		color: var(--main-color) !important;
 	}
-
 	.ytp-menuitem[aria-checked="true"] .ytp-menuitem-toggle-checkbox
 	{
 		background: var(--main-color) !important;
 	}
-
 	.ytp-chrome-controls .ytp-button.ytp-youtube-button:hover:not([aria-disabled="true"]):not([disabled]) .ytp-svg-fill-logo-tube-lozenge
 	{
 		fill: var(--main-color) !important;
 	}
-
 	.ytp-cued-thumbnail-overlay:hover .ytp-large-play-button-bg, .ytp-large-play-button.ytp-touch-device .ytp-large-play-button-bg
 	{
 		fill: var(--main-color) !important;
 	}
+	.resume-playback-progress-bar
+	{
+		background: var(--main-color) !important;
+	}
+  	.ytp-chrome-controls .ytp-button[aria-pressed]::after
+	{
+		background-color: var(--main-color) !important;
+	}
+	
 	/*Added because of this: https://forum.userstyles.org/discussion/53368/solved-fix-this-annoying-youtube-tab-select-bug-thats-been-there-forever#latest*/
 	.ytp-keyboard-focus .ytp-progress-bar:focus
 	{
 		box-shadow: none !important;
 	}
+	
 	/*Video menu*/
 	.ytp-popup
 	{
