--- a/YouTubeDeepDarkClassic.css
+++ b/YouTubeDeepDarkClassic.css
@@ -5,7 +5,7 @@
 
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.8.1*/
+/*1.8.2*/
 	
 	/*Main color variables*/
 	:root
@@ -496,7 +496,17 @@
    .ytp-cued-thumbnail-overlay:hover .ytp-large-play-button-bg, .ytp-large-play-button.ytp-touch-device .ytp-large-play-button-bg {
    fill: var(--main-color) !important;
 }
-/*Added because of this: https://forum.userstyles.org/discussion/53368/solved-fix-this-annoying-youtube-tab-select-bug-thats-been-there-forever#latest*/
+	.resume-playback-progress-bar
+	{
+		background: var(--main-color) !important;
+	}
+  	.ytp-chrome-controls .ytp-button[aria-pressed]::after
+	{
+		background-color: var(--main-color) !important;
+	}
+	
+
+	/*Added because of this: https://forum.userstyles.org/discussion/53368/solved-fix-this-annoying-youtube-tab-select-bug-thats-been-there-forever#latest*/
 		.ytp-keyboard-focus .ytp-progress-bar:focus{
 		box-shadow: none !important;
 	}
