--- a/YouTubeDeepDarkClassic.css
+++ b/YouTubeDeepDarkClassic.css
@@ -5,7 +5,7 @@
 
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.8.2*/
+/*1.8.3*/
 	
 	/*Main color variables*/
 	:root
@@ -566,5 +566,15 @@
 		border-color: var(--main-background) !important;
    color: var(--main-text) !important;
 }
+	
+	/*Swich account*/
+	.yt-uix-clickcard-card.yt-masthead-multilogin .yt-masthead-picker-header, .yt-uix-clickcard-card.yt-masthead-multilogin .yt-masthead-multilogin-users-header,.yt-masthead-account-picker-option
+	{
+   		background-color: var(--second-background) !important;
+	}
+	.yt-masthead-account-picker-option:hover 
+	{
+    		background: var(--hover-background) !important;
+	}
 
 }
