--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.8.0*/
+/*1.8.1*/
 
 	/*Main color variables*/
 	:root
@@ -78,7 +78,7 @@
 		--dimer-text: #ADA8AA;
 		*/
 		
-		/*YouTube colors*/
+		/*YouTube dark colors*/
 		/*
 		--main-color: #E52117;
 		--main-background: #111111;
@@ -87,9 +87,21 @@
 		--main-text: #E1E1E1;
 		--dimer-text: #7F7F7F;
 		*/
+		
+		/*YouTube light colors*/
+		/*
+		--main-color: #E52117;
+		--main-background: #F9F9F9;
+		--second-background: #FFFFFF;
+		--hover-background: #EAEAEA;
+		--main-text: #111111;
+		--dimer-text: #43434B;
+		*/
 	}
 	
 	/*Variable changes*/
+	
+	/*DARK theme variables*/
 	:not([style-scope]):not(.style-scope) 
 	{
 		--yt-primary-color: hsla(0, 100%, 100%, .88) !important;
@@ -195,6 +207,119 @@
 		--paper-toggle-button-unchecked-bar-color: var(--dimer-text) !important;
 		--paper-radio-button-checked-color: var(--main-color) !important;
 	}
+	
+	/*If you would like a light theme uncomment this code, comment the code above and use the YouTube light (comment user, uncomment youtube light colors)*/
+	/*LIGHT theme variables*/
+	/*
+	:not([style-scope]):not(.style-scope) 
+	{
+		--yt-primary-color: hsl(0, 0%, 6.7%) !important;
+		--yt-primary-text-color: var(--main-text) !important;
+		--yt-hovered-text-color: hsla(0, 0%, 6.7%, .8) !important;
+		--yt-secondary-text-color: hsla(0, 0%, 6.7%, .8) !important;
+		--yt-disabled-text-color: hsla(0, 0%, 6.7%, 0.3) !important;
+		--yt-placeholder-text-color: var(--dimer-text) !important;
+		--yt-border-color: var(--hover-background) !important;
+		--yt-searchbox-border-color: var(--main-background) !important;
+		--yt-searchbox-legacy-border-color: var(--main-background) !important;
+		--yt-searchbox-legacy-border-shadow-color: #eee !important;
+		--yt-searchbox-legacy-button-color: var(--hover-background) !important;
+		--yt-searchbox-legacy-button-border-color: var(--main-background) !important;
+		--yt-searchbox-legacy-button-focus-color: #e9e9e9 !important;
+		--yt-searchbox-legacy-button-hover-color: var(--hover-background) !important;
+		--yt-searchbox-legacy-button-hover-border-color: var(--main-background) !important;
+		--yt-searchbox-legacy-button-icon-color: #333 !important;
+		--yt-commentbox-border-inactive: hsl(0, 0%, 93.3%) !important;
+		--yt-commentbox-border-active: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-primary-disabled-button-text-color: hsl(0, 0%, 100%) !important;
+		--yt-disabled-paper-button-color: var(--yt-disabled-text-color) !important;
+		--yt-brand-paper-button-color: hsl(3, 81.8%, 49.6%) !important;
+		--yt-paper-radio-button-checked-color: hsl(0, 0%, 53.3%) !important;
+		--yt-paper-button-ink-color: hsl(0, 0%, 53.3%) !important;
+		--yt-icon-color: hsla(0, 0%, 6.7%, .4) !important;
+		--yt-icon-hover-color: var(--main-color) !important;
+		--yt-icon-active-color: var(--main-color) !important;
+		--yt-icon-disabled-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-expand-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-metadata-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-toggle-color: hsl(206.1, 79.3%, 52.7%) !important;
+		--yt-playlist-background-header: hsl(0, 0%, 93.3%) !important;
+		--yt-playlist-background-item: hsla(0, 0%, 93.3%, .6) !important;
+		--yt-playlist-title-text: hsl(0, 0%, 6.7%) !important;
+		--yt-playlist-message-text: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-subscribe-button-text-color: hsl(0, 0%, 100%) !important;
+		--yt-brand-color: hsl(3, 81.8%, 49.6%) !important;
+		--yt-button-text-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-button-payment-text-color: hsl(0, 0%, 100%) !important;
+		--yt-video-publish-date-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-vat-notice-text: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-copyright-text: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-guide-entry-hover-background-color: var(--hover-background) !important;
+		--yt-survey-button-color: var(--yt-primary-text-color) !important;
+		--yt-thumbnail-placeholder-color: hsl(0, 0%, 89%) !important;
+		--yt-transcript-cue-hover-background-color: hsl(0, 0%, 93.3%) !important;
+		--yt-transcript-toolbar-background-color: hsl(0, 0%, 93.3%) !important;
+		--yt-transcript-toolbar-text: hsl(0, 0%, 6.7%) !important;
+		--yt-badge-background: hsla(0, 0%, 93.3%, .6) !important;
+		--yt-badge-disabled-color: hsla(0, 0%, 53.3%, .4) !important;
+		--yt-collection-badge-color: hsla(0, 0%, 6.7%, .8) !important;
+		--yt-owner-badge-color: hsla(0, 0%, 6.7%, .4) !important;
+		--yt-simple-badge-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-ad-badge-text-color: hsl(0, 0%, 100%) !important;
+		--paper-menu-background-color: var(--second-background) !important;
+		--paper-menu-color: var(--main-text) !important;
+		--primary-text-color: var(--main-text) !important;
+		--yt-simple-menu-header-background: var(--second-background) !important;
+		--yt-item-section-header-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-menu-hover-backgound-color: hsl(0, 0%, 93.3%) !important;
+		--yt-menu-focus-background-color: hsla(0, 0%, 6.7%, .2) !important;
+		--yt-app-background: var(--main-background) !important;
+		--yt-main-app-background: var(--main-background) !important;
+		--yt-main-app-background-tmp: var(--main-background) !important;
+		--yt-guide-background: var(--second-background) !important;
+		--yt-dialog-background: var(--second-background) !important;
+		--yt-searchbox-background: var(--main-background) !important;
+		--yt-channel-header-background:  var(--second-background) !important;
+		--yt-playlist-sidebar-background: var(--second-background) !important;
+		--yt-transcript-background: hsl(0, 0%, 100%) !important;
+		--yt-watch-card-secondary-text-color: hsl(0, 0%, 53.3%) !important;
+		--yt-watch-card-album-header-background: hsl(0, 0%, 100%) !important;
+		--yt-comment-text-color: hsl(0, 0%, 6.7%) !important;
+		--yt-comment-metadata-text-color: hsl(0, 0%, 53.3%) !important;
+		--yt-moderation-panel-background: hsla(0, 0%, 93.3%, .6) !important;
+		--yt-moderation-panel-hover: hsla(0, 0%, 93.3%, .8) !important;
+		--yt-moderation-panel-comment-text: hsl(0, 0%, 6.7%) !important;
+		--yt-moderation-panel-comment-metadata-text: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-moderation-icon-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-moderation-icon-hover-color: hsl(0, 0%, 6.7%) !important;
+		--yt-moderation-panel-likely-spam-divider: hsla(0, 0%, 53.3%, .1) !important;
+		--yt-backstage-metadata-text-color: hsl(0, 0%, 53.3%) !important;
+		--yt-backstage-video-link-background-color: hsla(0, 0%, 93.3%, .4) !important;
+		--yt-backstage-image-alert-color: hsla(0, 0%, 6.7%, .6) !important;
+		--yt-shopping-product-info: hsla(0, 0%, 6.7%, .8) !important;
+		--yt-lightsource-section1-color: var(--yt-channel-header-background) !important;
+		--yt-lightsource-primary-title-color: var(--yt-primary-text-color) !important;
+		--yt-lightsource-secondary-title-color: var(--yt-metadata-color) !important;
+		--paper-tabs-selection-bar-color: var(--yt-lightsource-secondary-title-color) !important;
+		--paper-toggle-button-checked-button-color: black !important;
+		--paper-toggle-button-unchecked-bar-color: var(--dimer-text) !important;
+		--paper-radio-button-checked-color: var(--main-color) !important;
+		--yt-swatch-primary: var(--second-background) !important;
+		--yt-swatch-text: rgb(136, 136, 136) !important;
+		--yt-swatch-input-text: rgba(136, 136, 136,1) !important;
+		--yt-swatch-textbox-bg: rgba(19,19,19,1) !important;
+		--yt-swatch-icon-color: rgba(136,136,136,1) !important;
+		--yt-swatch-important-text: rgb(136, 136, 136) !important;
+		--yt-swatch-logo-override: rgb(136, 136, 136) !important;
+		--yt-lightsource-section1-color: var(--yt-channel-header-background) !important;
+		--yt-lightsource-primary-title-color: var(--yt-primary-text-color) !important;
+		--yt-lightsource-secondary-title-color: var(--yt-metadata-color) !important;
+		--paper-tabs-selection-bar-color: var(--yt-lightsource-secondary-title-color) !important;
+		--paper-toggle-button-checked-button-color: var(--main-text) !important;
+		--paper-toggle-button-unchecked-bar-color: var(--dimer-text) !important;
+		--paper-radio-button-checked-color: var(--main-color) !important;
+  }
+	*/
 	
 	/*Background for the entire page*/
 	html
