--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.8.2*/
+/*1.8.3*/
 
 	/*Main color variables*/
 	:root
@@ -621,7 +621,7 @@
 		box-shadow: none !important;
 	}
 	
-	/*Video menu*/
+	/*Video menu - might have issues with lighter colors*/
 	.ytp-popup
 	{
 		background: var(--second-background) !important;
@@ -630,6 +630,12 @@
 	.ytp-menuitem:hover:not([aria-disabled="true"]) 
 	{
 		background-color: var(--hover-background) !important;
+	}
+	/*Text*/
+	.iv-branding .iv-branding-context-name, .ytp-menuitem-label, .ytp-menuitem-label-count, .ytp-menuitem-content, .ytp-menu-label-secondary, .ytp-panel-header
+	{
+		color: var(--main-text) !important;
+		text-shadow: none !important;
 	}
 	
 	/*Watch later svg*/
